--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bower": "^1.8.12",
+    "ember-cli": "^3.25.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "mongoose": "^5.12.0"
   },
   "devDependencies": {
+    "ember-truth-helpers": "^3.0.0",
     "standard": "^16.0.3"
   }
 }
