--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bower": "^1.8.12",
+    "connect-flash": "^0.1.1",
     "ember-cli": "^3.25.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
