--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "bower": "^1.8.12",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.2.0",
     "ember-cli": "^3.25.2",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
@@ -25,6 +26,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.12.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
